# siemensatHomeServer

./: README.md  appCom.sh
src/: Makefile.am  README  configure.ac  main.cpp
src/common/: Makefile.am  common.cpp  common.h  mysqldb.cpp  mysqldb.h
src/common/gSoapWebServer/: Makefile.am  SAHBinding.nsmap  soapC.cpp  soapH.h  soapSAHBindingProxy.cpp  soapSAHBindingProxy.h  soapStub.h  soapdefs.h  stdsoap2.cpp  stdsoap2.h  webserver.h
src/common/gSoapWebServer/xmls/: SAHBinding.echo.req.xml  SAHBinding.echo.res.xml  SAHBinding.getAllDevicesOverviewData.req.xml  SAHBinding.getAllDevicesOverviewData.res.xml  SAHBinding.getAllDevicesOverviewExtendedData.req.xml  SAHBinding.getAllDevicesOverviewExtendedData.res.xml  SAHBinding.getAvailableDevicesIDs.req.xml  SAHBinding.getAvailableDevicesIDs.res.xml  SAHBinding.getDeviceAvailableActions.req.xml  SAHBinding.getDeviceAvailableActions.res.xml  SAHBinding.getDeviceOverviewData.req.xml  SAHBinding.getDeviceOverviewData.res.xml  SAHBinding.getDeviceOverviewExtendedData.req.xml  SAHBinding.getDeviceOverviewExtendedData.res.xml  SAHBinding.getDeviceStateVariables.req.xml  SAHBinding.getDeviceStateVariables.res.xml  SAHBinding.getLastDevicesEvents.req.xml  SAHBinding.getLastDevicesEvents.res.xml  SAHBinding.getServerTimestamp.req.xml  SAHBinding.getServerTimestamp.res.xml  SAHBinding.invokeAction.req.xml  SAHBinding.invokeAction.res.xml
src/elements/: Makefile.am  dbfunction.cpp  dbfunction.h  testgSoap.cpp  testgSoap.h
src/elements/appliances/: Makefile.am  appliance.cpp  appliance.h  communication.cpp  communication.h
(+3 files in other folders)
