AM_CPPFLAGS          = -I../../src -I../../src/common -I../../src/common/gSoapWebServer -I../../src/elements -I/usr/include/mysql
lib_LTLIBRARIES      = libelements.la
libelements_la_SOURCES = ../../src/elements/testgSoap.cpp\
												 ../../src/elements/dbfunction.cpp
libelements_la_LIBADD  = -L../common -lcommon appliances/libappliances.la
